2008-05-14  Hajime Tazaki  <tazaki@sfc.wide.ad.jp>

	* bugfix: bfd interval command implementation 

2008-05-07  Peter Szilagyi <peszilagyi@gmail.com>

	* Fixed crashing bug when deleting BFD sessions.

2007-03-25  Hajime TAZAKI  <thehajime@gmail.com>

	* kbfd-0.1 release.
